@@ -8,6 +8,7 @@ Have |# flush RIP immediately
 Add support for DECSCUSR
 Add support for explicit sort order
 Add default cursor style setting
+Add support for modifying UIFC colours
 Fix Windows Default Connection Settings
 Fix crash associated with movetext() and custom fonts
 Fix Windows GDI input hang when a key is held down
